Added Social Preview

--- a/index.html
+++ b/index.html
@@ -7,11 +7,45 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>ES Portfolio</title>
+    <meta name="title" content="ES Portfolio" />
     <meta
       name="description"
       content="Eduard Stroescu's personal web developer portfolio."
     />
     <meta name="author" content="Eduard Stroescu" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://eduardstroescu-portfolio.vercel.app/"
+    />
+    <meta property="og:title" content="ES Portfolio" />
+    <meta
+      property="og:description"
+      content="Eduard Stroescu's personal web developer portfolio."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/EduardStroescu/PubImages/main/WebsiteImages/portfolio.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://eduardstroescu-portfolio.vercel.app/"
+    />
+    <meta property="twitter:title" content="ES Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Eduard Stroescu's personal web developer portfolio."
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/EduardStroescu/PubImages/main/WebsiteImages/portfolio.jpg"
+    />
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
