Added CDN, switched to lazy loading, made Projects more responsive and other performance optimizations

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       sizes="16x16"
       href="./favicon/favicon-16x16.png"
     />
+    <link
+      rel="preload"
+      href="./src/assets/fonts/Dosis.woff"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link rel="preconnect" href="https://res.cloudinary.com" />
   </head>
 
   <body>
