Added Zustand, refactored multiple components, added error and not found routes

--- a/index.html
+++ b/index.html
@@ -65,10 +65,16 @@
     />
     <link
       rel="preload"
-      href="./src/assets/fonts/Dosis.woff"
+      href="./src/assets/fonts/Dosis-Medium.woff"
       as="font"
       type="font/woff2"
       crossorigin
+    />
+    <link
+      rel="preload"
+      href="./src/assets/svg/bgsvg.svg"
+      as="image"
+      type="image/svg+xml"
     />
     <link rel="preconnect" href="https://res.cloudinary.com" />
   </head>
