Add sitemap and robots

--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
       type="font/woff2"
       crossorigin
     />
-    <link
-      rel="preload"
-      href="./src/assets/svg/bgsvg.svg"
-      as="image"
-      type="image/svg+xml"
-    />
+    <link rel="preload" href="./src/assets/svg/bgsvg.svg" as="image" />
     <link rel="preconnect" href="https://res.cloudinary.com" />
+    <meta
+      name="google-site-verification"
+      content="B9Woz2prpIa5fcLaGKHxnchKqGCuHYDUXvwQ8dus_M8"
+    />
   </head>
 
   <body>
