--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     />
     <meta name="author" content="Eduard Stroescu" />
 
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="B9Woz2prpIa5fcLaGKHxnchKqGCuHYDUXvwQ8dus_M8"
+    />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
@@ -70,11 +76,18 @@
       type="font/woff2"
       crossorigin
     />
+
     <link rel="preload" href="./src/assets/svg/bgsvg.svg" as="image" />
     <link rel="preconnect" href="https://res.cloudinary.com" />
-    <meta
-      name="google-site-verification"
-      content="B9Woz2prpIa5fcLaGKHxnchKqGCuHYDUXvwQ8dus_M8"
+    <link
+      rel="prefetch"
+      crossorigin="anonymous"
+      href="https://www.gstatic.com/draco/versioned/decoders/1.5.5/draco_wasm_wrapper.js"
+    />
+    <link
+      rel="prefetch"
+      crossorigin="anonymous"
+      href="https://www.gstatic.com/draco/versioned/decoders/1.5.5/draco_decoder.wasm"
     />
   </head>
 
