Fix starting audio context, async load audio files

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     />
     <link
       rel="preload"
-      href="./src/assets/fonts/Dosis-Medium.woff"
+      href="/fonts/Dosis-Medium.woff"
       as="font"
-      type="font/woff2"
+      type="font/woff"
       crossorigin
     />
 
-    <link rel="preload" href="./src/assets/svg/bgsvg.svg" as="image" />
+    <link rel="preload" href="/svg/bgsvg.svg" as="image" type="image/svg+xml" />
     <link rel="preconnect" href="https://res.cloudinary.com" />
     <link
       rel="prefetch"
