--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>ES Portfolio</title>
+    <link rel="canonical" href="https://eduardstroescu.com" />
     <meta name="title" content="ES Portfolio" />
     <meta
       name="description"
