--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     />
     <link
       rel="preload"
-      href="/fonts/Dosis-Medium.woff"
+      href="/fonts/Dosis-Medium.woff2"
       as="font"
-      type="font/woff"
+      type="font/woff2"
       crossorigin
     />
 
