Improve loading style

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       crossorigin
     />
 
-    <link rel="preload" href="/svg/bgsvg.svg" as="image" type="image/svg+xml" />
+    <link rel="preload" href="/svg/bgsvg.webp" as="image" type="image/webp" />
     <link rel="preconnect" href="https://res.cloudinary.com" />
     <link
       rel="prefetch"
