--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>ES Portfolio</title>
-    <link rel="canonical" href="https://eduardstroescu.com" />
     <meta name="title" content="ES Portfolio" />
     <meta
       name="description"
@@ -23,10 +22,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://eduardstroescu-portfolio.vercel.app/"
-    />
+    <meta property="og:url" content="https://eduardstroescu.com/" />
     <meta property="og:title" content="ES Portfolio" />
     <meta
       property="og:description"
@@ -39,10 +35,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://eduardstroescu-portfolio.vercel.app/"
-    />
+    <meta property="twitter:url" content="https://eduardstroescu.com/" />
     <meta property="twitter:title" content="ES Portfolio" />
     <meta
       property="twitter:description"
