Refactor camera movement, Improve projects display and loading, Improve about animation & other performance optimizations and refactoring

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ES Portfolio</title>
     <meta name="title" content="ES Portfolio" />
     <meta
@@ -88,12 +85,13 @@
 
       html,
       body {
+        font-family: Dosis, serif;
         height: 100dvh;
         width: 100dvw;
         position: relative;
         background-color: #000f3b;
         overflow: hidden;
-        font-family: Dosis, serif;
+        touch-action: manipulation;
       }
 
       /* Scrollbar override */
