Drei HTML firefox fix, SEO changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="title" content="ES Portfolio" />
     <meta
       name="description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="Portfolio of Eduard Stroescu. Full-Stack web developer focused on projects built with React, Next.js, and Node.js, continuously exploring new technologies and approaches."
+    />
+    <meta
+      name="keywords"
+      content="Eduard Stroescu, Eduard Stroescu Portfolio, Web Developer, Front-End Developer, Full-Stack Developer, React, Next.js, React Three Fiber, Three.js, WebGL, GLSL, JavaScript, TypeScript, React Native, Expo, Node.js, Express, TailwindCSS, 3D Portfolio, 3D Web Developer, Projects, Portfolio, GitHub"
     />
     <meta name="author" content="Eduard Stroescu" />
     <!-- Google Verification -->
@@ -21,7 +25,7 @@
     <meta property="og:title" content="ES Portfolio" />
     <meta
       property="og:description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="Portfolio of Eduard Stroescu, a full-stack web developer building with React, Next.js, and Node.js, while experimenting with different technologies and approaches."
     />
     <meta
       property="og:image"
@@ -33,7 +37,7 @@
     <meta property="twitter:title" content="ES Portfolio" />
     <meta
       property="twitter:description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="Portfolio of Eduard Stroescu, a full-stack web developer building with React, Next.js, and Node.js, while experimenting with different technologies and approaches."
     />
     <meta
       property="twitter:image"
