Add HTML keywords and relocate directional sound hook inside audio button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="ES Portfolio" />
     <meta
       property="og:description"
-      content="Portfolio of Eduard Stroescu, a full-stack web developer building with React, Next.js, and Node.js, while experimenting with different technologies and approaches."
+      content="Eduard Stroescu's personal web developer portfolio."
     />
     <meta
       property="og:image"
@@ -37,7 +37,7 @@
     <meta property="twitter:title" content="ES Portfolio" />
     <meta
       property="twitter:description"
-      content="Portfolio of Eduard Stroescu, a full-stack web developer building with React, Next.js, and Node.js, while experimenting with different technologies and approaches."
+      content="Eduard Stroescu's personal web developer portfolio."
     />
     <meta
       property="twitter:image"
